      "from" section of any promote as the place to search for packages
      (CNY-2235).
    * Conary now allows a biarch system to have one flavor that expresses
      both the x86 and x86_64 support.  The flavorPreferences configuration
      option informs conary to prefer x86_64 packages. This change allows
      group building to automatically resolve x86 packages. (CNY-525)

  o Build Changes:
    * Conary will now ignore flavoring and requirements from elf libraries
      that are built for architectures other than the architecture that
      is being built for.  This avoids a common problem where a single
      extra sparc file library taints an entire package. (CNY-1717)

  o Server Changes:
    * Fixed scoring for target flavor sets (CNY-1539)
    * Setting/resetting the admin field permission is handled now by the
      setUserGroupIsAdmin() call instead of addAcl/editAcl (CNY-1782)
    * Removed (unimplemented) concept of caps for permissions
    * Added @requireClientProtocol decorator for server methods
    * Renamed usergroups to roles in the repository web user interface
      (CNY-1973)
    * Reworked server exceptions to have marshalling logic in the exception
      class instead of in a large if/elif block (CNY-747)
    * Call log now tracks cache misses (CNY-1843)
    * Repository no longer passes anonymous-hint to proxy layer (it has
      been False since 1.1.29)
    * Server exceptions are marshalled in the proxy layer now instead of
      in both the proxy and server layers
    * When the repository database is locked, RepositoryLocked exceptions
      are now returned for all code paths (CNY-1596)
    * troveNames method now filter by troveTypes argument (CNY-1838)
    * getPackageBranchPathIds method no longer requires an acl for the
      branch; it returns the pathIds and fileIds for troves the user is
      allowed to see (CNY-2038)
    * Reworked commit path to check for files which don't have contents